--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,34 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head>
-  <meta charset="UTF-8" />
-  <title th:text="${title}" style="display: none;">PAGE TITLE</title>
-  <link rel="stylesheet" href="css/styles.css" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
+<head th:replace="fragments :: head">
 </head>
 <body>
-  <div id="header">
-   <div id="header_box">
-    <img id="header_img" src="images/logo3.png" />
-    <div class="nav flex-row">
-      <div class="link txt_white">Shop</div>
-      <div class="divide txt_white">|</div>
-      <div class="link txt_white">Contact</div>
-      <div class="divide txt_white">|</div>
-      <div class="link txt_white">Login</div>
-    </div>
-    <div id="cart">
-      <i class="fas fa-shopping-cart cart"></i>
-      <span class="cart">Your Cart</span>
-    </div>
-    <div id="title" class="txt_white" th:text="${title}">SITE NAME</div>
-    <form>
-      <div id="search_area" class="flex-row"><i class="fas fa-search"></i><input type="text" name="q" placeholder="Search..." /></div>
-      <input id="search_button" type="submit" value="Submit" />
-    </form>
-    <hr class="txt_white" />
-   </div>
-  </div>
+  <div th:replace="fragments :: header"></div>
 
   <div class="section_full">
     <span class="title1">Featured Products</span>
@@ -113,39 +88,7 @@
     </div>
   </div>
 
-  <div id="footer">
-    <div class="nav flex-row">
-      <div class="link txt_white">Shop</div>
-      <div class="divide txt_white">|</div>
-      <div class="link txt_white">Contact</div>
-      <div class="divide txt_white">|</div>
-      <div class="link txt_white">Login</div>
-    </div>
-    <div class="footer_menu flex-row">
-      <div class="column">
-        <span>CONTACT INFO</span>
-        <p><i class="fas fa-phone-square" style="font-size: 24px;"></i> 505-652-4425</p>
-        <p><i class="fas fa-envelope-square" style="font-size: 24px;"></i> orders@brokeshirts.com</p>
-        <p><i class="fas fa-link" style="text-shadow: none; font-size: 14px; border-right: 1.5px solid #606060; border-bottom: 2px solid #606060; border-radius: 3px; background-color: white; color: #a0a0a0; padding: 3px; margin: 15px 15px 0 6px;"></i>http://BrokeShirts.com</p>
-      </div>
-      <div class="column" align="center">
-      <div style="width: 175px;" align="left">
-        <span>USEFUL LINKS</span><br />
-          <p>&#9675; About the Company</p>
-          <p>&#9675; Contact Us</p>
-          <p>&#9675; Terms &amp; Conditions</p>
-          <p>&#9675; Privacy Policy</p>
-      </div>
-      </div>
-      <div class="column" align="right">
-      <div style="width: 130px;" align="left">
-        <span>FOLLOW US</span>
-        <p><i class="fab fa-twitter-square"></i><i class="fab fa-facebook-square"></i></p>
-        <p><i class="fab fa-instagram"></i><i class="fab fa-youtube-square"></i></p>
-      </div>
-      </div>
-    </div>
-    <div class="copyright txt_white">&copy;2019 &nbsp; 4425 Entertainment Company</div>
-  </div>
+  <div th:replace="fragments :: footer"></div>
+
 </body>
 </html>
