added product model

--- a/src/main/resources/templates/admin/add_product.html
+++ b/src/main/resources/templates/admin/add_product.html
@@ -13,7 +13,8 @@
     <div class="section_full">
 
         <form method="post">
-            <input type="text" name="productName" />
+            Name: <input type="text" name="name" /><br />
+            Price: <input type="text" name="description" />
             <input type="submit" value="Add Product" />
         </form>
 
