added Terms and Conditions

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -121,6 +121,12 @@
   width: 100%;
 }
 
+#footer a {
+    display: inline-block;
+    color: #ffffff;
+    text-decoration: none;
+}
+
 #footer .nav {
   margin: 0 auto;
   padding-top: 28px;
