--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,6 +19,7 @@
     </div>
 
   </div>
+
   <div class="section_full">
     <span class="title1">Shirts</span>
     <span class="title2">T-Shirts | Long Sleeve | Women's | Child | Infant</span>
@@ -34,50 +35,34 @@
 
   </div>
 
-
   <div class="section_full">
     <span class="title1">Pants</span>
+    <span class="title2">Slacks | Sweatpants | Shorts</span>
   </div>
   <div class="section_full">
-    <div class="product">
+
+    <p th:unless="${pants} and ${pants.size()}"><strong>No Pants</strong></p>
+
+    <div class="product" th:each="product : ${pants}">
       <div class="product_img"></div>
-      <div class="product_des">Title<br /><strong>$15 - $17</strong></div>
+      <div class="product_des"><span th:text="${product.name}">TITLE</span><strong th:text="'$' + ${product.typeId}">$17.00</strong></div>
     </div>
-    <div class="product">
-      <div class="product_img"></div>
-      <div class="product_des">Title<br /><strong>$15 - $17</strong></div>
-    </div>
-    <div class="product">
-      <div class="product_img"></div>
-      <div class="product_des">Title<br /><strong>$15 - $17</strong></div>
-    </div>
-    <div class="product">
-      <div class="product_img"></div>
-      <div class="product_des">Title<br /><strong>$15 - $17</strong></div>
-    </div>
+
   </div>
 
   <div class="section_full">
     <span class="title1">Accessories</span>
-    <span class="title2">Mugs | Notebooks | Towels | Mousepads</span>
+    <span class="title2">Mugs | Notepads | Mouse Pads</span>
   </div>
   <div class="section_full">
-    <div class="product">
+
+    <p th:unless="${accessories} and ${accessories.size()}"><strong>No Accessories</strong></p>
+
+    <div class="product" th:each="product : ${accessories}">
       <div class="product_img"></div>
-      <div class="product_des">Title<br /><strong>$15 - $17</strong></div>
+      <div class="product_des"><span th:text="${product.name}">TITLE</span><strong th:text="'$' + ${product.typeId}">$17.00</strong></div>
     </div>
-    <div class="product">
-      <div class="product_img"></div>
-      <div class="product_des">Title<br /><strong>$15 - $17</strong></div>
-    </div>
-    <div class="product">
-      <div class="product_img"></div>
-      <div class="product_des">Title<br /><strong>$15 - $17</strong></div>
-    </div>
-    <div class="product">
-      <div class="product_img"></div>
-      <div class="product_des">Title<br /><strong>$15 - $17</strong></div>
-    </div>
+
   </div>
 
   <div th:replace="fragments :: footer"></div>
