--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -48,8 +48,8 @@
                 <span>USEFUL LINKS</span><br />
                 <p>&#9675; About the Company</p>
                 <p>&#9675; Contact Us</p>
-                <p>&#9675; Terms &amp; Conditions</p>
-                <p>&#9675; Privacy Policy</p>
+                <p>&#9675; <a href="terms">Terms &amp; Conditions</a></p>
+                <p>&#9675; <a href="policy">Privacy Policy</a></p>
             </div>
         </div>
         <div class="column" align="right">
