--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -25,6 +25,11 @@
             <input id="search_button" type="submit" value="Submit" />
         </form>
         <hr class="txt_white" />
+        <div id="menu">
+            <span th:each="menuItem : ${menuItems}">
+                <a th:href="'search?q=' + ${menuItem.name}" th:text="${menuItem.name}"></a>
+            </span>
+        </div>
     </div>
 </div>
 
