added AdminController and  DataController, refactored MainController

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -231,6 +231,18 @@
   width: 234px;
 }
 
+/************** MENU **************/
+
+.title2 {
+    display: inline-block;
+}
+
+.title2 a {
+    display: inline-block;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
 /*********** NAVIGATION ***********/
 
 .divide {}
