--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
   <div class="section_full">
     <span class="title1">Shirts</span>
     <span class="title2" th:each="shirtMenuItem : ${shirtMenu}">
-      <a th:href="'search?q=' + ${shirtMenuItem.name}" th:text="'&nbsp;&nbsp;' + ${shirtMenuItem.name} + '&nbsp;&nbsp;'"></a>
+      <a th:href="'/store/shirts/' + ${shirtMenuItem.name}" th:text="'&nbsp;&nbsp;' + ${shirtMenuItem.name} + '&nbsp;&nbsp;'"></a>
     </span>
   </div>
   <div class="section_full">
@@ -40,7 +40,7 @@
   <div class="section_full">
     <span class="title1">Pants</span>
     <span class="title2" th:each="pantsMenuItem : ${pantsMenu}">
-      <a th:href="'search?q=' + ${pantsMenuItem.name}" th:text="'&nbsp;&nbsp;' + ${pantsMenuItem.name} + '&nbsp;&nbsp;'"></a>
+      <a th:href="'/store/pants/' + ${pantsMenuItem.name}" th:text="'&nbsp;&nbsp;' + ${pantsMenuItem.name} + '&nbsp;&nbsp;'"></a>
     </span>
   </div>
   <div class="section_full">
@@ -57,7 +57,7 @@
   <div class="section_full">
     <span class="title1">Accessories</span>
     <span class="title2" th:each="accessoryMenuItem : ${accessoriesMenu}">
-      <a th:href="'search?q=' + ${accessoryMenuItem.name}" th:text="'&nbsp;&nbsp;' + ${accessoryMenuItem.name} + '&nbsp;&nbsp;'"></a>
+      <a th:href="'/store/accessories/' + ${accessoryMenuItem.name}" th:text="'&nbsp;&nbsp;' + ${accessoryMenuItem.name} + '&nbsp;&nbsp;'"></a>
     </span>
   </div>
   <div class="section_full">
