Converted all templates and controllers to work with MySql database.

--- a/src/main/resources/templates/data.html
+++ b/src/main/resources/templates/data.html
@@ -15,7 +15,7 @@
         <p th:text="'Address one: ' + ${address.addressOne}"></p>
         <p th:text="'Address two: ' + ${address.addressTwo}"></p>
         <p th:text="'City: ' + ${address.city}"></p>
-        <p th:text="'State: ' + ${address.stateCode}"></p>
+        <p th:text="'State: ' + ${address.state}"></p>
         <p th:text="'Zip code: ' + ${address.zipCode}"></p>
         <p th:text="'Customer id: ' + ${address.customerId}"></p><br />
     </div>
