--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -19,7 +19,7 @@
             <i class="fas fa-shopping-cart cart"></i>
             <span class="cart">Your Cart</span>
         </div>
-        <div id="title" class="txt_white" th:text="${title}">SITE NAME</div>
+        <div id="title" class="txt_white" th:text="${title}">PAGE NAME</div>
         <form>
             <div id="search_area" class="flex-row"><i class="fas fa-search"></i><input type="text" name="q" placeholder="Search..." /></div>
             <input id="search_button" type="submit" value="Submit" />
