--- a/src/main/resources/templates/admin/categories.html
+++ b/src/main/resources/templates/admin/categories.html
@@ -29,10 +29,10 @@
 
         <div th:each="item, iStat : ${categories}">
             <div class="listItem" th:style="${iStat.odd}? 'background-color: #e1e0e0;'">
-                <div class="moveUp" th:if="${item.id == 0}"></div>
-                <div class="moveUp" th:unless="${item.id == 1}">/\</div>
-                <div class="moveDown" th:if="${item.id == categories.size()}"></div>
-                <div class="moveDown" th:unless="${item.id == categories.size()}">\/</div>
+                <div class="moveUp" th:if="${item.sortId == 0}"></div>
+                <div class="moveUp" th:unless="${item.sortId == 1}"><a th:href="'categories/moveup/' + ${item.id}">/\</a></div>
+                <div class="moveDown" th:if="${item.sortId == categories.size()}"></div>
+                <div class="moveDown" th:unless="${item.sortId == categories.size()}">\/</div>
                 <div class="oneItem" th:text="${item.name}">ITEM</div>
             </div>
         </div>
