--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -99,21 +99,21 @@ a .admin_menu_button:hover {
     position: absolute;
     height: 15px;
     font-size: 10px;
-    margin: 3px 92px;
+    margin: 3px 36px;
 }
 
 .moveDown {
     position: absolute;
     height: 15px;
     font-size: 10px;
-    margin: 15px 92px;
+    margin: 15px 36px;
 }
 
 .oneItem {
     position: absolute;
     height: 30px;
-    margin-left: 107px;
-    font-size: 24px;
+    margin-left: 50px;
+    font-size: 26px;
 }
 
 .oneItem span {
@@ -128,9 +128,8 @@ a .admin_menu_button:hover {
 }
 
 .hideItem form input {
-    padding: 3px;
-    margin-top: 1px;
-    width: 80px;
-    text-align: left;
-    border-radius: 5px;
+    margin-left: 10px;
+    border: 0;
+    background: none;
+    font-size: 20px;
 }
