changed links for terms and policy to use thymeleaf.

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -54,8 +54,8 @@
                 <span>USEFUL LINKS</span><br />
                 <p>&#9675; About the Company</p>
                 <p>&#9675; Contact Us</p>
-                <p>&#9675; <a href="terms">Terms &amp; Conditions</a></p>
-                <p>&#9675; <a href="policy">Privacy Policy</a></p>
+                <p>&#9675; <a th:href="@{/terms}">Terms &amp; Conditions</a></p>
+                <p>&#9675; <a th:href="@{/policy}">Privacy Policy</a></p>
             </div>
         </div>
         <div class="column" align="right">
